# agentforge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  action.yml  agentforge_prd.md  deny.toml  docker-compose.yml  push-to-github.sh  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: action-test.yml  agent-test-nvidia.yml  ci.yml  release.yml  security.yml
.sqlx/: query-087086fb2c4b68537e87aec46a165ca934d1f894f0c161869ed8c2e8c84ae3a8.json  query-60155609c5de1d43033043f9a4edef45bc83f40b92cce363023871ca0205b355.json  query-684ed2824143dd79a5f121050e9db04c6856f3575216d1d4e177895153e8e2ab.json  query-68a2c4fb2d2871b59616d1b709d36569cc078aec1faebef945bb9a595f3f6ccc.json  query-695f8e7aba06bcd87602c4ec556f7875ee7708638954cd421cfb34db2b392ff4.json  query-6f3e62c934f4d21c5a77ba3d65f36a05af6d535cb22d7876a136f9439961ecbd.json  query-6f9267d909491c9da71d6a90022ed7c23b9c3d3cf37b1014fcb78bc42e0a12fd.json  query-754178131259febf20774a96ad92abbec380afc650fc4b0c8b1679541110f01c.json  query-816f5b191844f29d4445808b6a1580a98f1a458287c3f4fc6551d0f76ae6c285.json  query-995145f764e07b72b9af092ae3cde888394310783c99a0e504eb34fd5d43a700.json  query-9cef0b8b9bf36e5296eb6d7acabf787a269cd59f794e1691e9114403f0ff40df.json  query-9d12f984f2e3b3dc2e09ce8ab76d198125fec067d4ff36f07bd0a1bff64d38c2.json  query-b3c520c5090658cac0439b951c98e7e348d7b979f15e291eaf9722a8cb47767f.json  query-d185c9fad136b9a7fdc62d446d13af0c6232d12e613541241c965f75ade5d621.json  query-d6d00013bc2b852a1061f0eace919599e562705bdbfe8c3e11de6b39f314f1fe.json  query-dadc448f5086e16f1c6ae6fdda7a3ca561a82944d7194e9957137854bd738565.json  query-daf1ab3ddf21cc0389b539d0394ca3b932b57e068cf393c7380a062d36d15219.json  query-df0fc6f2d76d2b07c93ddce0a47bae2284ada77c986c7b6b8f426d400f69e5e3.json  query-f472744f3c1488c3900ab093b7f9e709b6d905ad4268d52b1076281f81989a58.json
crates/agentforge-api/: Cargo.toml
crates/agentforge-api/src/: error.rs  lib.rs  main.rs  state.rs
crates/agentforge-api/src/routes/: agents.rs  benchmarks.rs  diff.rs  finetune.rs  mod.rs  promote.rs  runs.rs  shadow.rs
crates/agentforge-api/tests/: integration_test.rs
crates/agentforge-benchmarks/: Cargo.toml
crates/agentforge-benchmarks/src/: agentbench.rs  gaia.rs  lib.rs  normalizer.rs  runner.rs  webarena.rs
crates/agentforge-cli/: Cargo.toml
crates/agentforge-cli/src/: main.rs
crates/agentforge-core/: Cargo.toml
crates/agentforge-core/src/: agent.rs  benchmark.rs  cost.rs  error.rs  eval.rs  finetune.rs  lib.rs  multiagent.rs  redteam.rs  scenario.rs  score.rs  shadow.rs  trace.rs
crates/agentforge-db/: Cargo.toml
crates/agentforge-db/src/: agent_repo.rs  benchmark_repo.rs  eval_repo.rs  finetune_repo.rs  lib.rs  pool.rs  scenario_repo.rs  shadow_repo.rs  trace_repo.rs
crates/agentforge-finetune/: Cargo.toml
crates/agentforge-finetune/src/: exporter.rs  lib.rs
crates/agentforge-finetune/src/formats/: anthropic.rs  huggingface.rs  mod.rs  openai.rs
crates/agentforge-gatekeeper/: Cargo.toml
crates/agentforge-gatekeeper/src/: gatekeeper.rs  lib.rs
crates/agentforge-multiagent/: Cargo.toml
crates/agentforge-multiagent/src/: graph.rs  lib.rs  runner.rs
crates/agentforge-observability/: Cargo.toml
crates/agentforge-observability/src/: datadog.rs  langsmith.rs  lib.rs  otlp.rs
crates/agentforge-online-eval/: Cargo.toml
crates/agentforge-online-eval/src/: comparator.rs  lib.rs  shadow.rs
crates/agentforge-optimizer/: Cargo.toml
crates/agentforge-optimizer/src/: cost.rs  lib.rs  mutations.rs  optimizer.rs
crates/agentforge-parser/: Cargo.toml
crates/agentforge-parser/src/: detect.rs  lib.rs  parser.rs  validator.rs
crates/agentforge-parser/src/formats/: anthropic.rs  copilot.rs  crewai.rs  mod.rs  native.rs  openai.rs
crates/agentforge-redteam/: Cargo.toml
crates/agentforge-redteam/src/: generator.rs  lib.rs  probes.rs  scorer.rs
crates/agentforge-runner/: Cargo.toml
crates/agentforge-runner/src/: lib.rs  llm.rs  runner.rs  worker.rs
crates/agentforge-scenarios/: Cargo.toml
crates/agentforge-scenarios/src/: adversarial.rs  domain_seeded.rs  generator.rs  lib.rs  schema_derived.rs
crates/agentforge-scorer/: Cargo.toml
crates/agentforge-scorer/src/: clusters.rs  deterministic.rs  judge.rs  lib.rs  scorer.rs
fixtures/: agentforge-evaluator.agent.md  customer-support-agent.yaml
migrations/: 001_agent_versions.sql  002_eval_runs.sql  003_scenarios.sql  004_traces.sql  005_shadow_runs.sql  006_finetune_exports.sql  007_benchmarks.sql  008_trace_cost.sql
scripts/: test_endpoints.sh
src/: lib.rs
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx
web/src/api/: agents.ts  benchmarks.ts  client.ts  diff.ts  finetune.ts  runs.ts  shadow.ts
web/src/components/: DiffViewer.tsx  GateResultsList.tsx  PollingCard.tsx  RunStatusBadge.tsx  ScorecardDisplay.tsx
web/src/components/layout/: Sidebar.tsx  TopBar.tsx
web/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
web/src/hooks/: useRecentItems.ts
web/src/lib/: utils.ts
web/src/pages/: AgentDetailPage.tsx  AgentsPage.tsx  BenchmarkDetailPage.tsx  CreateAgentPage.tsx  DashboardPage.tsx  DiffPage.tsx  ExportDetailPage.tsx  RunDetailPage.tsx  ShadowRunDetailPage.tsx
web/src/types/: index.ts
