[package]
name = "agentforge-api"
description = "REST API server for AgentForge (F-07)"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "agentforge-api"
path = "src/main.rs"

[dependencies]
agentforge-core = { path = "../agentforge-core" }
agentforge-db = { path = "../agentforge-db" }
agentforge-parser = { path = "../agentforge-parser" }
agentforge-scenarios = { path = "../agentforge-scenarios" }
agentforge-runner = { path = "../agentforge-runner" }
agentforge-scorer = { path = "../agentforge-scorer" }
agentforge-optimizer = { path = "../agentforge-optimizer" }
agentforge-gatekeeper = { path = "../agentforge-gatekeeper" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
