[package]
name = "agentforge-benchmarks"
description = "Benchmark comparison: runs agents against GAIA, AgentBench, and WebArena tasks and reports percentile vs. published baselines (v2 F-05)"
version = "0.1.5"
edition.workspace = true

[dependencies]
agentforge-core   = { path = "../agentforge-core" }
agentforge-runner = { path = "../agentforge-runner" }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-test        = { workspace = true }
