[package]
name = "agentforge-finetune"
description = "Fine-tuning dataset exporter: converts labeled traces to OpenAI, Anthropic, and HuggingFace JSONL formats (v2 F-02)"
version = "0.1.6"
edition.workspace = true

[dependencies]
agentforge-core = { path = "../agentforge-core" }
serde           = { workspace = true }
serde_json      = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
