[package]
name = "agentforge-observability"
description = "Observability hooks: exports AgentForge traces to OTLP, LangSmith, and Datadog backends (v2 F-06)"
version = "0.1.6"
edition.workspace = true

[dependencies]
agentforge-core = { path = "../agentforge-core" }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
async-trait = { workspace = true }
opentelemetry     = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-test        = { workspace = true }
