[package]
name = "agentforge-optimizer"
description = "Optimizer: mutation strategies to generate candidate agent variants (F-05)"
version = "0.1.0"
edition.workspace = true

[dependencies]
agentforge-core = { path = "../agentforge-core" }
agentforge-scorer = { path = "../agentforge-scorer" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
