[package]
name = "agentforge-scenarios"
description = "Scenario generation (F-02): schema-derived, adversarial, domain-seeded"
version.workspace = true
edition.workspace = true

[dependencies]
agentforge-core = { path = "../agentforge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }
wiremock = { workspace = true }
